# carga_electronica

components/adc_sensor/: CMakeLists.txt  adc_sensor.c
components/adc_sensor/include/: adc_sensor.h
components/communication_setting/: CMakeLists.txt  communication_setting.c
components/communication_setting/include/: communication_setting.h
components/display_tft/: CMakeLists.txt  display_tft.c
components/display_tft/include/: display_tft.h
components/display_tft/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_Corriente.c  ui_Corriente.h  ui_Corriente_Limit_set.c  ui_Corriente_Limit_set.h  ui_Init.c  ui_Init.h  ui_Modo.c  ui_Modo.h  ui_Powering_Up.c  ui_Powering_Up.h  ui_Resistencia.c  ui_Resistencia.h  ui_Running.c  ui_Running.h  ui_Voltaje.c  ui_Voltaje.h  ui_Voltaje_Limit_set.c  ui_Voltaje_Limit_set.h  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_hora.c  ui_comp_hora.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
components/display_tft/ui/screens/: ui_Screen1.c  ui_Screen1.h
components/encoder/: CMakeLists.txt  encoder.c
components/encoder/include/: encoder.h
components/mcp4725/: mcp4725.c
components/pid_control/: pid_control.c
components/pin_setting/: CMakeLists.txt  pin_setting.c
components/pin_setting/include/: pin_setting.h
components/system_manager/: CMakeLists.txt  system_manager.c
components/system_manager/include/: system_manager.h
lvgl__lvgl_old_backup/env_support/cmake/: esp.cmake
main/: idf_component.yml  main.c
